# RaftCore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RaftCore.h  TODO.md  component.mk  idf_component.yml  lib_script.py  library.json  library.properties
components/: CMakeLists.txt  RaftCore.h
components/comms/: CMakeLists.txt
components/comms/CommsBridgeMsg/: CommsBridgeMsg.h
components/comms/CommsChannelManager/: CommsChannel.h  CommsChannelBridge.h  CommsChannelManager.cpp  CommsChannelManager.h
components/comms/CommsChannelMsg/: CommsChannelMsg.h
components/comms/CommsChannels/: CommsChannel.cpp  CommsChannel.h  CommsChannelBridge.h  CommsChannelManager.cpp  CommsChannelManager.h
components/comms/CommsCoreIF/: CommsCoreIF.h  ProtocolCodecFactoryHelper.h
components/comms/FileStreamProtocols/: FileDownloadOKTOProtocol.cpp  FileDownloadOKTOProtocol.h  FileStreamBase.cpp  FileStreamBase.h  FileUploadHTTPProtocol.cpp  FileUploadHTTPProtocol.h  FileUploadOKTOProtocol.cpp  FileUploadOKTOProtocol.h  StreamDatagramProtocol.cpp  StreamDatagramProtocol.h
components/comms/ProtocolBase/: ProtocolBase.h
components/comms/ProtocolExchange/: FileStreamSession.cpp  FileStreamSession.h  ProtocolExchange.cpp  ProtocolExchange.h
components/comms/ProtocolOverAscii/: ProtocolOverAscii.cpp  ProtocolOverAscii.h
components/comms/ProtocolRICFrame/: ProtocolRICFrame.cpp  ProtocolRICFrame.h
components/comms/ProtocolRICJSON/: ProtocolRICJSON.cpp  ProtocolRICJSON.h
components/comms/ProtocolRICSerial/: ProtocolRICSerial.cpp  ProtocolRICSerial.h
components/comms/ProtocolRawMsg/: ProtocolRawMsg.h
components/comms/RICRESTMsg/: RICRESTMsg.cpp  RICRESTMsg.h
components/comms/ROSSerial/: ROSSerialMsg.cpp  ROSSerialMsg.h
components/comms/RestAPIEndpoints/: RestAPIEndpoint.h  RestAPIEndpointManager.cpp  RestAPIEndpointManager.h
components/comms/test/: ProtocolOverAscii_test.cpp
components/core/: CMakeLists.txt
components/core/APICommon/: FileStreamActivityHookFnType.h  FileStreamBlock.h  FileStreamBlockOwned.h
components/core/ArPreferences/: ArPreferences.cpp  ArPreferences.h
components/core/ArduinoUtils/: ArduinoGPIO.cpp  ArduinoGPIO.h  ArduinoOrAlt.h  ArduinoOrAlternate.h  ArduinoPgmSpace.h  ArduinoStdlibNonISO.c  ArduinoStdlibNonISO.h  ArduinoTime.cpp  ArduinoTime.h  ArduinoWString.cpp  ArduinoWString.h  RaftArduino.h
components/core/Bus/: BusAddrRecord.cpp  BusAddrRecord.h  BusAddrStatus.cpp  BusAddrStatus.h  BusBase.h  BusConsts.h  BusDeviceIF.h  BusManager.cpp  BusManager.h  BusRequestInfo.cpp  BusRequestInfo.h  BusRequestResult.h  BusSerial.cpp  BusSerial.h  BusStats.h  DeviceStatus.cpp  DeviceStatus.h  HWElemReq.h  PollDataAggregator.h  PollDataAggregatorIF.h  RaftBus.h  RaftBusConsts.h  RaftBusDevice.h  RaftBusDevicesIF.h  RaftBusStats.h  RaftBusSystem.cpp  RaftBusSystem.h  VirtualPinResult.h
components/core/CommsBridgeMsg/: CommsBridgeMsg.h
components/core/CommsChannelManager/: CommsChannel.cpp  CommsChannel.h  CommsChannelManager.cpp  CommsChannelManager.h
components/core/CommsChannelMsg/: CommsChannelMsg.h
components/core/CommsCoreIF/: CommsCoreIF.h  ProtocolCodecFactoryHelper.h
components/core/Config/: ConfigBase.cpp  ConfigBase.h  ConfigMulti.cpp  ConfigMulti.h  ConfigNVS.cpp  ConfigNVS.h  JSONParams.h  RaftConfig - OLD.h  RdJsmn.cpp  RdJsmn.h  RdJson.cpp  RdJson.h
components/core/ConfigPinMap/: ConfigPinMap.cpp  ConfigPinMap.h
components/core/DNSResolver/: DNSResolver.cpp  DNSResolver.h
components/core/DataCollection/: SampleCollectorJSON.cpp  SampleCollectorJSON.h
components/core/DebounceButton/: DebounceButton.cpp  DebounceButton.h
components/core/DebugGlobals/: DebugGlobals.cpp  DebugGlobals.h
components/core/DeviceManager/: DemoDevice.cpp  DemoDevice.h  DeviceFactory.cpp  DeviceFactory.h  DeviceManager.cpp  DeviceManager.h
components/core/DeviceTypes/: DevicePollingInfo.h  DeviceTypeRecord.h  DeviceTypeRecordDynamic.h  DeviceTypeRecords.cpp  DeviceTypeRecords.h  PollReadLenExpr.h
components/core/ESPMDNS/: mdns.c  mdns.h  mdns_networking.h  mdns_networking_lwip.c  mdns_networking_socket.c  mdns_private.h
components/core/ExpressionEval/: ExpressionContext.cpp  ExpressionContext.h  ExpressionEval.cpp  ExpressionEval.h  tinyexpr.c
components/core/FileStreamProtocols/: FileDownloadOKTOProtocol.cpp  FileDownloadOKTOProtocol.h  FileStreamBase.h  FileUploadHTTPProtocol.cpp  FileUploadHTTPProtocol.h  FileUploadOKTOProtocol.cpp  FileUploadOKTOProtocol.h  StreamDatagramProtocol.cpp  StreamDatagramProtocol.h
components/core/FileSystem/: FileSystem.cpp  FileSystem.h  FileSystemChunker.cpp  FileSystemChunker.h
components/core/HWElem/: HWElemBase.cpp  HWElemBase.h
components/core/LEDPixels/: ESP32RMTLedStrip.cpp  ESP32RMTLedStrip.h  LEDPatternBase.h  LEDPatternStatus.h  LEDPixHSV.h  LEDPixel.h  LEDPixelConfig.h  LEDPixelIF.h  LEDPixels.cpp  LEDPixels.h  LEDPixelsDevice.cpp  LEDPixelsDevice.h  LEDPixelsShowCB.h  LEDSegment.h  LEDSegmentConfig.h  LEDStripConfig.h  LEDStripEncoder.c  LEDStripEncoder.h  LedStripConfig.h
components/core/LEDPixelsBasic/: BasicRMTLeds.cpp  BasicRMTLeds.h  BasicRMTLedsWrapper.cpp  BasicRMTLedsWrapper.h  LEDPixelsBasic.cpp  LEDPixelsBasic.h  simple-encoder-demo.c
components/core/LEDPixelsSimple/: LEDPixelsSimple.cpp  LEDPixelsSimple.h  SimpleRMTLeds.cpp  SimpleRMTLeds.h  (+2 more)
linux_tests/linux_lib/: CMakeLists.txt  mk_lib.sh
unit_tests/main/: AnalysisOfLibPerf.ipynb  CMakeLists.txt  ConfigBase_test.cpp  DeviceNames_test.cpp  FileSystem_test.cpp  JSON_test_data_large.h  JSON_test_data_small.h  JsonDirect.h  PerfTestMacros.h  ProtocolOverAscii_test.cpp  RaftJsmn_test.cpp  RaftJsonNVS_test.cpp  RaftJsonPrefixed_test.cpp  RaftJson_jsmn_test.cpp  RaftJson_perf_extract.cpp  RaftJson_perf_test_jsmn.cpp  RaftJson_perf_test_large.cpp  RaftJson_perf_test_small.cpp  RaftJson_test.cpp  RaftJson_test_no_path.cpp  RaftJson_test_nv_pairs.cpp  RaftJson_test_values.cpp  RestAPIEndpointManager_test.cpp  SysTypeManager_test.cpp  exprCtx_unit_test.cpp  expressions_unit_test.cpp  test_app_main.cpp  test_main.cpp
(+234 files in other folders)
