# Ensure CMake supports FetchContent
cmake_minimum_required(VERSION 3.16)

set(RAFT_CORE_REQUIRES 
  nvs_flash
  driver
  vfs
  spiffs
  fatfs
  sdmmc
  esp_wifi
  esp_eth
  esp_timer
  mdns
)

if("${IDF_VERSION_MAJOR}.${IDF_VERSION_MINOR}" VERSION_GREATER_EQUAL "5.0")
  set(RAFT_CORE_REQUIRES ${RAFT_CORE_REQUIRES} esp_psram)
  set(RAFT_CORE_REQUIRES ${RAFT_CORE_REQUIRES} esp_adc)
endif()

idf_component_register(
  SRCS
    "components/comms/CommsChannels/CommsChannel.cpp"
    "components/comms/CommsChannels/CommsChannelManager.cpp"
    "components/comms/CommsChannelMsg/CommsChannelMsg.cpp"
    "components/comms/FileStreamProtocols/FileDownloadOKTOProtocol.cpp"
    "components/comms/FileStreamProtocols/FileStreamBase.cpp"
    "components/comms/FileStreamProtocols/FileUploadHTTPProtocol.cpp"
    "components/comms/FileStreamProtocols/FileUploadOKTOProtocol.cpp"
    "components/comms/FileStreamProtocols/StreamDatagramProtocol.cpp"
    "components/comms/ProtocolBase/ProtocolBase.cpp"
    "components/comms/ProtocolExchange/FileStreamSession.cpp"
    "components/comms/ProtocolExchange/ProtocolExchange.cpp"
    "components/comms/ProtocolOverAscii/ProtocolOverAscii.cpp"
    "components/comms/ProtocolRawMsg/ProtocolRawMsg.cpp"
    "components/comms/ProtocolRICFrame/ProtocolRICFrame.cpp"
    "components/comms/ProtocolRICJSON/ProtocolRICJSON.cpp"
    "components/comms/ProtocolRICSerial/ProtocolRICSerial.cpp"
    "components/comms/RICRESTMsg/RICRESTMsg.cpp"
    "components/comms/ROSSerial/ROSSerialMsg.cpp"
    "components/core/ArduinoUtils/ArduinoGPIO.cpp"
    "components/core/ArduinoUtils/ArduinoStdlibNonISO.c"
    "components/core/ArduinoUtils/ArduinoTime.cpp"
    "components/core/ArduinoUtils/ArduinoWString.cpp"
    "components/core/ArPreferences/ArPreferences.cpp"
    "components/core/Bus/BusSerial.cpp"
    "components/core/ConfigPinMap/ConfigPinMap.cpp"
    "components/core/DebounceButton/DebounceButton.cpp"
    "components/core/DebugGlobals/DebugGlobals.cpp"
    "components/core/DNSResolver/DNSResolver.cpp"
    "components/core/ExpressionEval/ExpressionContext.cpp"
    "components/core/ExpressionEval/ExpressionEval.cpp"
    "components/core/ExpressionEval/tinyexpr.c"
    "components/core/FileSystem/FileSystem.cpp"
    "components/core/FileSystem/FileSystemChunker.cpp"
    "components/core/LEDPixels/ESP32RMTLedStrip.cpp"
    "components/core/LEDPixels/LEDPixels.cpp"
    "components/core/LEDPixels/LEDStripEncoder.c"
    "components/core/libb64/cencode.cpp"
    "components/core/Logger/LoggerCore.cpp"
    "components/core/MiniHDLC/MiniHDLC.cpp"
    "components/core/MQTT/MQTTProtocol.cpp"
    "components/core/MQTT/RaftMQTTClient.cpp"
    "components/core/NetworkSystem/NetworkSystem.cpp"
    "components/core/NetworkSystem/WiFiScanner.cpp"
    "components/core/RaftCoreApp/RaftCoreApp.cpp"
    "components/core/RaftJson/RaftJsonNVS.cpp"
    "components/core/RestAPIEndpoints/RestAPIEndpointManager.cpp"
    "components/core/StatusIndicator/StatusIndicator.cpp"
    "components/core/SupervisorStats/SupervisorStats.cpp"
    "components/core/SysManager/SysManager.cpp"
    "components/core/SysMod/SysModBase.cpp"
    "components/core/SysTypes/SysTypeManager.cpp"
    "components/core/Utils/ESPUtils.cpp"
    "components/core/Utils/RaftUtils.cpp"
  INCLUDE_DIRS
    "components/comms/CommsBridgeMsg"
    "components/comms/CommsChannels"
    "components/comms/CommsChannelMsg"
    "components/comms/CommsCoreIF"
    "components/comms/FileStreamProtocols"
    "components/comms/ProtocolBase"
    "components/comms/ProtocolExchange"
    "components/comms/ProtocolOverAscii"
    "components/comms/ProtocolRawMsg"
    "components/comms/ProtocolRICFrame"
    "components/comms/ProtocolRICJSON"
    "components/comms/ProtocolRICSerial"
    "components/comms/RICRESTMsg"
    "components/comms/ROSSerial"
    "components/core/APICommon"
    "components/core/ArduinoUtils"
    "components/core/ArPreferences"
    "components/core/Bus"
    "components/core/ConfigPinMap"
    "components/core/DebounceButton"
    "components/core/DebugGlobals"
    "components/core/DNSResolver"
    "components/core/ExpressionEval"
    "components/core/FileSystem"
    "components/core/LEDPixels"
    "components/core/libb64"
    "components/core/Logger"
    "components/core/MiniHDLC"
    "components/core/MQTT"
    "components/core/NamedValueProvider"
    "components/core/NetworkSystem"
    "components/core/NumericalFilters"
    "components/core/RaftCoreApp"
    "components/core/RaftJson"
    "components/core/RestAPIEndpoints"
    "components/core/RingBuffer"
    "components/core/StatusIndicator"
    "components/core/SupervisorStats"
    "components/core/SysManager"
    "components/core/SysMod"
    "components/core/SysTypes"
    "${RAFT_BUILD_ARTEFACTS_FOLDER}"
    "components/core/ThreadSafeQueue"
    "components/core/Utils"
  REQUIRES
    ${RAFT_CORE_REQUIRES}
)
