# Ensure CMake supports FetchContent
cmake_minimum_required(VERSION 3.16)

idf_component_register(
    SRCS 
      "ArduinoUtils/ArduinoGPIO.cpp"
      "ArduinoUtils/ArduinoTime.cpp"
      "ArduinoUtils/ArduinoWString.cpp"
      "ArduinoUtils/ArduinoStdlibNonISO.c"
      "ArPreferences/ArPreferences.cpp"
      "CommsChannelMsg/CommsChannelMsg.cpp"
      "Config/ConfigBase.cpp"
      "Config/ConfigMulti.cpp"
      "Config/ConfigNVS.cpp"
      "Config/RdJsmn.cpp"
      "Config/RdJson.cpp"
      "ConfigPinMap/ConfigPinMap.cpp"
      "DebounceButton/DebounceButton.cpp"
      "ExpressionEval/ExpressionEval.cpp"
      "ExpressionEval/ExpressionContext.cpp"
      "ExpressionEval/tinyexpr.c"
      "libb64/cencode.cpp"
      "Logger/LoggerCore.cpp"
      "MiniHDLC/MiniHDLC.cpp"
      "RestAPIEndpoints/RestAPIEndpointManager.cpp"
      "SupervisorStats/SupervisorStats.cpp"
      "SysMod/SysModBase.cpp"
      "SysManager/SysManager.cpp"
      "SysTypes/SysTypeManager.cpp"
      "Utils/RaftUtils.cpp"
      "Utils/ESPUtils.cpp"
    INCLUDE_DIRS
      "APICommon"
      "ArduinoUtils"
      "ArPreferences"
      "CommsChannelMsg"
      "CommsCoreIF"
      "Config"
      "ConfigPinMap"
      "DebounceButton"
      "ExpressionEval"
      "libb64"
      "Logger"
      "MiniHDLC"
      "NetCoreIF"
      "NumericalFilters"
      "RestAPIEndpoints"
      "RingBuffer"
      "SupervisorStats"
      "SysMod"
      "SysManager"
      "SysTypes"
      "ThreadSafeQueue"
      "Utils"
    REQUIRES
      nvs_flash
      driver
    )
