idf_component_register(SRCS 
                        "test_main.cpp"
                    INCLUDE_DIRS 
                        "."
                    REQUIRES
                        esp_system
                        unity
                    PRIV_REQUIRES 
                        RaftCore 
                        nvs_flash
                    )
